change image file path
change image file path

--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
   <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">
   Hypertext Markup Language (HTML)</a>  is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
   </p>
-  <img src="C:\Users\BB\Desktop\WEB\unsplash_02.jpg" width="75%">
+  <img src="unsplash_02.jpg" width="75%">
   <p style="margin-top:50px;">
   Hypertext Markup Language (HTML) is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
   </p>
